@@ -15,6 +15,7 @@
 # fit on the head of an executable :-)
 #
 
+#==============================================================================
 rpm	alias --scripts --qf '\
 %|PRETRANS?{pretransinstall scriptlet\
 %|PRETRANSPROG?{ (using %{PRETRANSPROG})}|:\n%{PRETRANS}\n}:\
@@ -46,8 +47,30 @@ rpm	alias --scripts --qf '\
 ' \
 	--POPTdesc=$"list install/erase scriptlets from package(s)"
 
+#==============================================================================
+rpm	alias --scripts:yaml --qf '\
+%|PREINPROG?{Prein(%{PREINPROG}):\
+ %{PREIN:yaml}|\
+\n}|\
+%|POSTINPROG?{Postin(%{POSTINPROG}):\
+ %{POSTIN:yaml}\
+\n}|\
+%|PREUNPROG?{Preun(%{PREUNPROG}):\
+ %{PREUN:yaml}\
+\n}|\
+%|POSTUNPROG?{Postun(%{POSTUNPROG}):\
+ %{POSTUN:yaml}\
+\n}|\
+' \
+	--POPTdesc=$"list install/erase scriptlets (YAML markup)"
+
+#==============================================================================
+rpm     alias --danglinglink  --nofiles  \
+	--pipe "set $(grep '^/' | sort -u) ; [ -L  \"$1\" ] && echo \"$1\" " \
+        --POPTdesc=$"display link needed, but not provided, by packages"
+
 rpm     alias --orphandirs --nofiles \
-                   --pipe "grep '^/' | sort -u" \
+	--pipe "set $(grep '^/' | sort -u) ; [ -d  \"$1\" ] && echo \"$1\" " \
         --POPTdesc=$"display directories needed, but not provided, by packages"
 
 rpm	alias --setperms -q --qf '[\[ -L %{FILENAMES:shescape} \] || chmod %7.7{FILEMODES:octal} %{FILENAMES:shescape}\n]' \
@@ -416,6 +439,16 @@ Other:\
 }|\
 \n' \
 	--POPTdesc=$"display yum other.yaml markup"
+
+#==============================================================================
+rpm	alias --wnh:primary.yaml --qf @USRLIBRPM@/qf/wnh_primary_yaml \
+	--POPTdesc=$"display wnh primary.yaml markup"
+
+rpm	alias --wnh:filelists.yaml --qf @USRLIBRPM@/qf/wnh_filelists_yaml \
+	--POPTdesc=$"display wnh filelists.yaml markup"
+
+rpm	alias --wnh:other.yaml --qf @USRLIBRPM@/qf/wnh_other_yaml \
+	--POPTdesc=$"display wnh other.yaml markup"
 
 #==============================================================================
 rpm	alias --triggerscripts --qf '\
