@@ -1,4 +1,7 @@
 5.1.7 -> 5.1.8:
+    - devzero2000: fix --orphandirs port alias ; add --danglinglink popt alias
+    - jbj: fix: eliminate a argvSplit() memory leak.
+    - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
     - jbj: rude & crude backing store for --queryformat templates.
     - jbj: PLD: rpm-popt-aliases: Add --downgrade/--norepackage aliases.
     - jbj: PLD: rpm-notsc: Don't use rdtsc timing.
